src/objects/loan__Disbursal_Transaction_Interface__c.object
<CustomObject>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipLabel>Disbursal Transaction Interface</relationshipLabel>
        <relationshipName>Disbursal_Transaction_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Disbursal_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Disbursal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Incoming_Loan_ID__c</fullName>
        <label>Incoming Loan ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account_No__c</fullName>
        <label>Loan Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan ID</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Disbursal Transaction Interface</relationshipLabel>
        <relationshipName>Disbursal_Transaction_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Mode Id</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>Disbursal Transaction Interface</relationshipLabel>
        <relationshipName>Disbursal_Transaction_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode_Name__c</fullName>
        <label>Payment Mode Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Disbursal Transaction Interface</label>
    <nameField>
        <displayFormat>DTIID-{0000000000}</displayFormat>
        <label>Disbursal Transaction Interface ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursal Transaction Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>